# stargayte-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
db/: schema.sql
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_challenge_response_message.py  0003_challenge_photo.py  0004_drop_challenge_photo.py  0005_access_history_screen_codes.py  0006_challenge_reapplied_from.py  0007_drop_challenge_result_match_id.py  0008_challenge_result_and_chain_kind.py  0009_challenge_participant_result_notified.py  0010_expire_stale_no_response_challenges.py  0011_stamp_schedule_on_rejected_challenges.py  0012_challenge_result_draw_not_held.py  0013_replays_table.py  0014_replay_id_to_match_results.py  0015_challenge_discard_refactor.py  0016_participant_discarded_response.py  0017_app_versions_registry.py  0018_app_version_notes.py  0019_match_requests.py  0020_challenge_from_match_request.py  0021_match_request_target_read_at.py  0022_drop_challenge_message.py  0023_leagues.py  0024_league_planned_teams.py  (+8 more)
scripts/: backup_matches_tables.sql  rating_backtest.py
tests/: conftest.py  test_access_ping.py  test_app_version.py  test_challenges.py  test_env_vars.py  test_leagues.py  test_match_requests.py  test_matches_comments.py  test_matches_merge_replay.py  test_matches_notes.py  test_matches_pagination.py  test_matches_ranking.py  test_matches_raw_name_preserved.py  test_matches_stats.py  test_matches_team_lineup_filter.py  test_replay_name_classifications.py  test_replay_name_mapping_retroactive.py  test_smoke.py
(+64 files in other folders)
