[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stargayte-api"
version = "0.1.0"
description = "Stargayte 클럽 대항전 경기결과 관리 서비스의 API 서버"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # app import 전에 테스트용 환경변수를 설정해야 한다

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
